fixed images cutting off mat-card

--- a/great-blue-fishing/src/app/admin/manage-donations/manage-donations.component.css
+++ b/great-blue-fishing/src/app/admin/manage-donations/manage-donations.component.css
@@ -34,7 +34,7 @@ input[type='file']{
 
 .image-preview img {
   height: 100%;
-  border-radius: 50%
+  border-radius: 10%
 }
 
 mat-select {
@@ -46,13 +46,12 @@ mat-select {
 }
 
 mat-grid-list {
-  width: 60%;
   height: auto;
-  margin: auto;
 }
 
 .donation-company-list mat-card {
   width: 85%;
+  height: auto;
   margin: auto;
 }
 .donation-company-list mat-card-title {
@@ -60,9 +59,9 @@ mat-grid-list {
 }
 
 .donation-company-list img {
-  height: 60%;
-  width: 70%;
-  border-radius: 50%;
+  height: 20%;
+  width: 30%;
+  border-radius: 10%;
   display: block;
   margin: 5% auto 2% auto;
 }
